--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -1,27 +1,24 @@
 .cabecera {
     margin: 0%;
-    padding-left: 80px;
+    padding-left: 50px;
     padding-top: 30px;
     padding-bottom: 50px;
-    padding-right: 50px;
+    padding-right: 30px;
     background-color: white;    
 }
 
 .menú {
 
-    text-align: right;
-    padding-left: 50px;
-    padding-right: 50px;
-    padding-top: 50px;
-    right: 50px;
-    left: 50px;
- 
+    text-align: center;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 50px; 
 }
 
 li{
 
     padding: 20px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Maven Pro', sans-serif;
     font-size: 120%;
         
 }
