--- a/views/QuienesSomos.html
+++ b/views/QuienesSomos.html
@@ -12,7 +12,8 @@
     <!---Código CSS propio-->
     <link rel="stylesheet" href="../assets/scss/archivo.css">
     <!---Código fuentes-->
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cairo&family=Teko&display=swap" rel="stylesheet">
       <!---Código animación-->
     <link rel="stylesheet"    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"  />
 </head>
@@ -35,6 +36,9 @@
                                   <a class="nav-link" href="servicios.html">Servicios</a>
                                 </li>
                                 <li class="nav-item">
+                                  <a class="nav-link" href="portfolio.html">Portfolio</a>
+                                </li>
+                                <li class="nav-item">
                                   <a class="nav-link" href="contacto.html">Contacto</a>
                                 </li>
                               </ul>                     
@@ -47,35 +51,38 @@
     <section>
             <div class="jumbotron jumbotron-fluid">
                 <div class="container">
-                  <h1 class="display-4">¿Quiénes somos?</h1>
+                  <h3 class="titulos">¿Quiénes somos?</h1>
                   <p class="lead"> Somos un grupo de comunicadores sociales que nos dedicamos al área de Marketing Digital y Publicidad. Nos apasiona las posibilidades de crecimiento que se pueden crear en el mundo digital y los resultados que se pueden lograr. La innovación, la creatividad en el contenido y planificar la comunicación en el mundo digital son nuestros pilares de trabajo.</p>
                 </div>
               </div>  
     </section>
     <section>
+      <div class="container">
         <div class="card-deck">
-            <div class="card">
-                  <img src="../img/nadia.jpg" class="card-img-top" alt="foto nadia">
-                  <div class="card-body">
-                    <h5 class="card-title">Nadia S.</h5>
-                    <p class="card-text">Área comercial y publicidad</p>
-                  </div>
+          <div class="card">
+                <img src="../img/nadia.jpg" class="card-img-top" alt="foto nadia">
+                <div class="card-body">
+                  <h5 class="subtitulos">Nadia S.</h5>
+                  <p class="card-text">Área comercial y publicidad</p>
                 </div>
-                <div class="card">
-                  <img src="../img/jose.jpg" class="card-img-top" alt="foto jose">
-                  <div class="card-body">
-                    <h5 class="card-title">Josefina C.</h5>
-                    <p class="card-text">Área diseño y animación</p>
-                  </div>
+              </div>
+              <div class="card">
+                <img src="../img/jose.jpg" class="card-img-top" alt="foto jose">
+                <div class="card-body">
+                  <h5 class="subtitulos">Josefina C.</h5>
+                  <p class="card-text">Área diseño y animación</p>
                 </div>
-                <div class="card">
-                  <img src="../img/sofi.jpg" class="card-img-top" alt="foto sofi">
-                  <div class="card-body">
-                    <h5 class="card-title">Sofia A.</h5>
-                    <p class="card-text">Área Marketing Digital y Social Media</p>
-                  </div>
-            </div>
-     </div>
+              </div>
+              <div class="card">
+                <img src="../img/sofi.jpg" class="card-img-top" alt="foto sofi">
+                <div class="card-body">
+                  <h5 class="subtitulos">Sofia A.</h5>
+                  <p class="card-text">Área Marketing Digital y Social Media</p>
+                </div>
+          </div>
+        </div>
+      </div>
+   
   
     </section>
    
@@ -102,7 +109,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="footer_copyright">
-                        <h6>Copuright° Agencia Sans |2020 </h6>
+                        <h6>Copyright° Agencia Sans |2020 </h6>
                     </div>
                 </div>
                 
