--- a/views/servicios.html
+++ b/views/servicios.html
@@ -12,7 +12,8 @@
     <!---Código CSS propio-->
     <link rel="stylesheet" href="../assets/scss/archivo.css">
     <!---Código fuentes-->
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cairo&family=Teko&display=swap" rel="stylesheet">
       <!---Código animación-->
     <link rel="stylesheet"    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"  />
 </head>
@@ -32,6 +33,9 @@
                                   <a class="nav-link active" href="../index.html">Inicio</a>
                                 </li>
                                 <li class="nav-item">
+                                  <a class="nav-link" href="portfolio.html">Portfolio</a>
+                                </li>
+                                <li class="nav-item">
                                   <a class="nav-link" href="QuienesSomos.html">Quienes Somos</a>
                                 </li>
                                 <li class="nav-item">
@@ -45,51 +49,51 @@
          </div>             
     </header>
       <section>
-        <h1>Nuestros servicios</h1>
+        <h3 class="titulos">Nuestros servicios!</h3>
         <div class="container">
+          <div class="card-deck">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="subtitulos">Social Media</h5>
+                  <p class="card-text">Potenciamos tu marca en redes sociales.</p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="subtitulos">Diseño Gráfico</h5>
+                  <p class="card-text">Buscamos el impacto visual de tu marca diseñando todas las piezas gráficas para web y redes sociales.</p>
+                </div>
+              </div>
+            </div>
+  
             <div class="card-deck">
-                <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-title">Social Media</h5>
-                    <p class="card-text">Potenciamos tu marca en redes sociales.</p>
-                  </div>
-                </div>
-                <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-title">Diseño Gráfico</h5>
-                    <p class="card-text">Buscamos el impacto visual de tu marca diseñando todas las piezas gráficas para web y redes sociales.</p>
-                  </div>
-                </div>
-                <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-title">Branding</h5>
-                    <p class="card-text">Desarrollamos la identidad corporativa de tu marca.</p>
-                  </div>
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="subtitulos">Branding</h5>
+                  <p class="card-text">Desarrollamos la identidad corporativa de tu marca.</p>
                 </div>
               </div>
-    
-              <div class="card-deck">
-                <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-title">Desarrollo Web</h5>
-                    <p class="card-text">Creamos tu sitio web personalizado garantizando una excelente experiencia de los usarios.</p>
-                  </div>
-                </div>
-                <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-title">E-commerce</h5>
-                    <p class="card-text">Desarrollamos soluciones de comercio electrónico centradas en la experiencia del consumidor</p>
-                  </div>
-                </div>
-                <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-title">Publicidad Digital</h5>
-                    <p class="card-text">Gestionamos y monitoreamos todas campañas de publicidad en GoogleAds y FacebookAds.</p>
-                  </div>
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="subtitulos">Desarrollo Web</h5>
+                  <p class="card-text">Creamos tu sitio web personalizado garantizando una excelente experiencia de los usarios.</p>
                 </div>
               </div>
-
-
+            </div>
+            <div class="card-deck">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="subtitulos">E-commerce</h5>
+                  <p class="card-text">Desarrollamos soluciones de comercio electrónico centradas en la experiencia del consumidor</p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="subtitulos">Publicidad Digital</h5>
+                  <p class="card-text">Gestionamos y monitoreamos todas campañas de publicidad en GoogleAds y FacebookAds.</p>
+                </div>
+              </div>
+            </div>          
         </div>
     </section>
 
@@ -116,7 +120,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="footer_copyright">
-                        <h6>Copuright° Agencia Sans |2020 </h6>
+                        <h6>Copyright° Agencia Sans |2020 </h6>
                     </div>
                 </div>
                 
