--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -1,8 +1,8 @@
 .footer {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Cairo', sans-serif;
     text-align: center;
     color:white;
-    background-color: rgb(78, 58, 70);
+    background-color: rgb(61, 58, 60);
     background-size: cover;
     font-size: 100%;
 
@@ -18,6 +18,7 @@
     margin: 10px;
     padding: 25px;
     align-self: flex-start;
+    font-family: 'Cairo', sans-serif;;
    
 }
 
@@ -39,4 +40,6 @@ i:hover{
 .footer_copyright{
 
     align-self: flex-end;
+    font-family: 'Cairo', sans-serif;
+    font-size: 70%;
 }
