--- a/assets/scss/archivo.css
+++ b/assets/scss/archivo.css
@@ -1,25 +1,23 @@
 @charset "UTF-8";
 .cabecera {
   margin: 0%;
-  padding-left: 80px;
+  padding-left: 50px;
   padding-top: 30px;
   padding-bottom: 50px;
-  padding-right: 50px;
+  padding-right: 30px;
   background-color: white;
 }
 
 .menú {
-  text-align: right;
-  padding-left: 50px;
-  padding-right: 50px;
+  text-align: center;
+  padding-left: 10px;
+  padding-right: 10px;
   padding-top: 50px;
-  right: 50px;
-  left: 50px;
 }
 
 li {
   padding: 20px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Maven Pro', sans-serif;
   font-size: 120%;
 }
 
@@ -36,10 +34,10 @@ a:hover {
 }
 
 .footer {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Cairo', sans-serif;
   text-align: center;
   color: white;
-  background-color: #4e3a46;
+  background-color: #3d3a3c;
   background-size: cover;
   font-size: 100%;
 }
@@ -55,6 +53,7 @@ a:hover {
   padding: 25px;
   -ms-flex-item-align: start;
       align-self: flex-start;
+  font-family: 'Cairo', sans-serif;
 }
 
 .footer_redes {
@@ -80,42 +79,55 @@ i:hover {
 .footer_copyright {
   -ms-flex-item-align: end;
       align-self: flex-end;
+  font-family: 'Cairo', sans-serif;
+  font-size: 70%;
 }
 
-.bienvenida {
+.text_anaglyphic {
   color: blueviolet;
-  font-family: 'Roboto', sans-serif;
-  font-size: 150%;
+  text-shadow: -3px -3px 0 #ddcfec;
   text-align: center;
-  padding: 30px;
+  font-size: 200%;
+  font-family: 'Cairo', sans-serif;
+}
+
+.titulos {
+  color: #a500f1;
+  font-family: 'Cairo', sans-serif;
+  text-shadow: -3px -3px 0 #ddcfec;
+  text-align: center;
+  font-size: 1 solid;
+  padding: 5%;
+}
+
+.subtitulos {
+  color: #e6388f;
+  text-shadow: -3px -3px 0 #ddcfec;
+  text-align: center;
+  font-size: 150% solid;
+  font-family: 'Cairo', sans-serif;
+  -webkit-transition: all 1s;
+  transition: all 1s;
+}
+
+.subtitulos:hover {
+  font-size: 180%;
 }
 
 @media (max-width: 576px) {
-  .bienvenida {
-    font-size: 100%;
+  .text_anaglyphic {
+    font-size: 200%;
   }
 }
 
 .carrusel-slide {
-  padding-bottom: 50px;
+  padding: 5%;
+  padding-top: 20%;
   -webkit-animation-name: aparecer;
           animation-name: aparecer;
   -webkit-animation-duration: 2s;
           animation-duration: 2s;
-}
-
-.leyenda {
-  font-family: 'Roboto', sans-serif;
-  color: white;
-  font-size: 120%;
-  text-align: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin: 30px;
-  padding: 10px;
-  padding-top: 20px;
-  border: white solid 3px;
+  border-style: dashed;
 }
 
 .display-4 .section-1 {
@@ -136,21 +148,13 @@ i:hover {
   background-color: #d2c3d6;
 }
 
-h1 {
-  color: blueviolet;
-  font-family: 'Roboto', sans-serif;
-  font-size: 180%;
-  text-align: center;
-  width: 100%;
-}
-
 .card-deck {
   margin-bottom: 10px;
 }
 
 .card {
-  background-color: #dfd4f8;
-  color: white;
+  background-image: white;
+  border: color blueviolet;
   margin: 10px;
   -webkit-animation-name: aparecer;
           animation-name: aparecer;
@@ -158,22 +162,15 @@ h1 {
           animation-duration: 3s;
 }
 
-.card-title {
-  color: #875aac;
-  font-family: 'Roboto', sans-serif, solid;
-  font-size: solid;
-}
-
 .card-text {
   color: #4e3a46;
-  font-family: 'Roboto', sans-serif, solid;
+  font-family: 'Cairo', sans-serif;
+  text-align: center;
 }
 
 .jumbotron {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#d6c8e4), to(#c79bdb));
-  background-image: linear-gradient(#d6c8e4, #c79bdb);
-  color: white;
-  font-family: 'Roboto', sans-serif;
+  background-color: white;
+  font-family: 'Cairo', sans-serif;
   -webkit-animation-name: aparecer;
           animation-name: aparecer;
   -webkit-animation-duration: 3s;
@@ -181,21 +178,16 @@ h1 {
 }
 
 .display-4 {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Cairo', sans-serif;
   font-size: 140%;
 }
 
 .lead {
-  font-family: 'Roboto', sans-serif;
-  font-size: 120%;
-}
-
-.formulario {
-  background-color: white;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Cairo', sans-serif;
   font-size: 120%;
   text-align: center;
-  margin: 10px;
+  border: solid #645d61;
+  padding: 10px;
 }
 
 @-webkit-keyframes aparecer {
@@ -214,5 +206,29 @@ h1 {
   100% {
     opacity: 1;
   }
+}
+
+.dirección {
+  margin: 10px;
+}
+
+.linea {
+  color: #645d61;
+  text-shadow: -3px -3px 0 #ddcfec;
+  text-align: center;
+  font-size: 1 solid;
+  font-family: 'Cairo', sans-serif;
+}
+
+.formulario {
+  background-color: white;
+  font-family: 'Cairo', sans-serif;
+  font-size: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 20px;
+  -ms-flex-line-pack: justify;
+      align-content: space-between;
 }
 /*# sourceMappingURL=archivo.css.map */
