--- a/views/contacto.html
+++ b/views/contacto.html
@@ -12,7 +12,8 @@
     <!---Código CSS propio-->
     <link rel="stylesheet" href="../assets/scss/archivo.css">
     <!---Código fuentes-->
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cairo&family=Teko&display=swap" rel="stylesheet">
       <!---Código animación-->
     <link rel="stylesheet"    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"  />
 </head>
@@ -35,6 +36,9 @@
                                   <a class="nav-link" href="servicios.html">Servicios</a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link" href="portfolio.html">Portfolio</a>
+                                  </li>
+                                <li class="nav-item">
                                   <a class="nav-link" href="QuienesSomos.html">Quienes Somos</a>
                                 </li>
                               </ul>                     
@@ -46,32 +50,26 @@
     </header>
 <section>
     <div class="container">
-        <h1>Contacto</h1>
+        <h3 class="titulos">Contacto</h1>
         <div class="formulario">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <form action="">
                         <label for="formulario_nombre">Nombre: </label>
-                        <input type="text" placeholder="Ingrese su nombre" id="Nombre">
+                        <input type="text" placeholder="Ingrese su nombre completo" id="Nombre">
                  </div>
-                 <div class="col-md-6">
-                    <label for="formulario_apellido">Apellido: </label>
-                    <input type="text" placeholder="Ingrese su apellido" id="Apellido">
+                 <div class="col-md-4">
+                    <label for="formulario_telefono">Tel: </label>
+                    <input type="text" placeholder="Ingrese su telefono" id="Telefono">
+                </div>
+                <div class="col-md-4">
+                    <label for="formulario_correo">Mail:</label>
+                    <input type="email"placeholder="Ingrese su correo" id="Email"> 
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <label for="formulario_correo">Mail</label>
-                    <input type="email"> 
-                </div>
-                <div class="col-md-6">
-                    ¿Desa recibir nuestro Newsletter?
-                    <input type="checkbox">
-                </div>              
-            </div>
-            <div class="row">Mensaje
+            <div class="row"> 
                 <div class="col-md-12">
-                    <textarea name="" id="" cols="100" rows="10"></textarea>
+                    <textarea name="mensaje" id="" cols="100" rows="8" placeholder="Dejanos tu consulta!"></textarea>
                 </div>               
             </div>
             <div class="row">
@@ -83,9 +81,30 @@
                 </div>
             </div>
             </form>
+        </div>
+        </div>
+</section>
+<section>
+    <div class="container">
+        <h5 class="subtitulos">¿Dónde estamos?</h5>
+        <div class="container row">
+            <div class="col-md-12">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3404.748995330326!2d-64.18155318478027!3d-31.42104100362134!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a29a6ece524f%3A0xd212fe80d8d57b17!2sCorrientes%20463%2C%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1608083118043!5m2!1ses!2sar" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            </div>            
+        </div>  
+        <div class="container row">
+            <div class="col-md-12">
+                <div class="dirección"> 
+                    <p class="linea"> Dirección: Corrientes 463 5°F Córdoba, Argentina</p>
+                    <p class="linea">Tel: +54 9 3518015106</p>        
+                </div>             
+                       
+            </div>
 
         </div>
     </div>
+
+
 </section>
     <footer>
         <div class="container-fluid">
@@ -109,7 +128,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="footer_copyright">
-                        <h6>Copuright° Agencia Sans |2020 </h6>
+                        <h6>Copyright° Agencia Sans |2020 </h6>
                     </div>
                 </div>
                 
