--- a/views/contacto.html
+++ b/views/contacto.html
@@ -41,6 +41,9 @@
                                 <li class="nav-item">
                                   <a class="nav-link" href="QuienesSomos.html">Quienes Somos</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="contacto.html">Contacto</a>
+                                  </li>
                               </ul>                     
                         </div> 
                     </div>         
@@ -69,7 +72,7 @@
             </div>
             <div class="row"> 
                 <div class="col-md-12">
-                    <textarea name="mensaje" id="" cols="100" rows="8" placeholder="Dejanos tu consulta!"></textarea>
+                    <textarea name="mensaje" id="" cols="140" rows="8" placeholder="Dejanos tu consulta!"></textarea>
                 </div>               
             </div>
             <div class="row">
@@ -86,7 +89,7 @@
 </section>
 <section>
     <div class="container">
-        <h5 class="subtitulos">¿Dónde estamos?</h5>
+        <h2 class="titulos">¿Dónde estamos?</h2>
         <div class="container row">
             <div class="col-md-12">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3404.748995330326!2d-64.18155318478027!3d-31.42104100362134!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a29a6ece524f%3A0xd212fe80d8d57b17!2sCorrientes%20463%2C%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1608083118043!5m2!1ses!2sar" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
@@ -97,26 +100,22 @@
                 <div class="dirección"> 
                     <p class="linea"> Dirección: Corrientes 463 5°F Córdoba, Argentina</p>
                     <p class="linea">Tel: +54 9 3518015106</p>        
-                </div>             
-                       
+                </div>                           
             </div>
-
         </div>
     </div>
-
-
 </section>
-    <footer>
+ <footer>
         <div class="container-fluid">
             <div class="footer">                
             <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <div class="footer_contacto">
                         <h3>Consultas</h3>
                         <p>info@agenciasans.com</p> 
                         </div>                        
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <div class="footer_redes">
                         <h3>¡Seguinos en nuestas redes!</h3>
                         <i class='fab fa-facebook' style='font-size:24px'></i>
@@ -124,17 +123,14 @@
                         <i class='fab fa-linkedin' style='font-size:24px'></i>
                         </div>
                     </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="footer_copyright">
-                        <h6>Copyright° Agencia Sans |2020 </h6>
-                    </div>
-                </div>
-                
+                    <div class="col-md-4">
+                      <div class="footer_copyright">
+                          <h6>Copyright° Agencia Sans | 2020 </h6>
+                      </div>
+                  </div>
             </div>
         </div>
-    </div>  
+    </div>        
     </footer>
       <!-- CDN script de Jqyuery -->
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
