--- a/views/servicios.html
+++ b/views/servicios.html
@@ -33,6 +33,9 @@
                                   <a class="nav-link active" href="../index.html">Inicio</a>
                                 </li>
                                 <li class="nav-item">
+                                  <a class="nav-link" href="servicios.html">Servicios</a>
+                                </li>
+                                <li class="nav-item">
                                   <a class="nav-link" href="portfolio.html">Portfolio</a>
                                 </li>
                                 <li class="nav-item">
@@ -96,38 +99,33 @@
             </div>          
         </div>
     </section>
-
-    
     <footer>
-        <div class="container-fluid">
-            <div class="footer">                
-            <div class="row">
-                    <div class="col-md-6">
-                        <div class="footer_contacto">
-                        <h3>Consultas</h3>
-                        <p>info@agenciasans.com</p> 
-                        </div>                        
-                    </div>
-                    <div class="col-md-6">
-                        <div class="footer_redes">
-                        <h3>¡Seguinos en nuestas redes!</h3>
-                        <i class='fab fa-facebook' style='font-size:24px'></i>
-                        <i class='fab fa-instagram' style='font-size:24px'></i>
-                        <i class='fab fa-linkedin' style='font-size:24px'></i>
-                        </div>
-                    </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
+      <div class="container-fluid">
+          <div class="footer">                
+          <div class="row">
+                  <div class="col-md-4">
+                      <div class="footer_contacto">
+                      <h3>Consultas</h3>
+                      <p>info@agenciasans.com</p> 
+                      </div>                        
+                  </div>
+                  <div class="col-md-4">
+                      <div class="footer_redes">
+                      <h3>¡Seguinos en nuestas redes!</h3>
+                      <i class='fab fa-facebook' style='font-size:24px'></i>
+                      <i class='fab fa-instagram' style='font-size:24px'></i>
+                      <i class='fab fa-linkedin' style='font-size:24px'></i>
+                      </div>
+                  </div>
+                  <div class="col-md-4">
                     <div class="footer_copyright">
-                        <h6>Copyright° Agencia Sans |2020 </h6>
+                        <h6>Copyright° Agencia Sans | 2020 </h6>
                     </div>
                 </div>
-                
-            </div>
-        </div>
-    </div>  
-    </footer>
+          </div>
+      </div>
+  </div>        
+  </footer>
       <!-- CDN script de Jqyuery -->
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <!-- CDN script de popper-->
