--- a/assets/scss/archivo.css
+++ b/assets/scss/archivo.css
@@ -1,10 +1,10 @@
 @charset "UTF-8";
 .cabecera {
   margin: 0%;
-  padding-left: 50px;
+  padding-left: 40px;
   padding-top: 30px;
   padding-bottom: 50px;
-  padding-right: 30px;
+  padding-right: 20px;
   background-color: white;
 }
 
@@ -16,7 +16,7 @@
 }
 
 li {
-  padding: 20px;
+  padding: 10px;
   font-family: 'Maven Pro', sans-serif;
   font-size: 120%;
 }
@@ -54,6 +54,7 @@ a:hover {
   -ms-flex-item-align: start;
       align-self: flex-start;
   font-family: 'Cairo', sans-serif;
+  font-size: 100%;
 }
 
 .footer_redes {
@@ -70,6 +71,7 @@ i {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  padding: 15px;
 }
 
 i:hover {
@@ -77,32 +79,33 @@ i:hover {
 }
 
 .footer_copyright {
-  -ms-flex-item-align: end;
-      align-self: flex-end;
   font-family: 'Cairo', sans-serif;
-  font-size: 70%;
+  font-size: 100%;
+  text-align: center;
+  margin: 10px;
+  padding: 25px;
 }
 
 .text_anaglyphic {
   color: blueviolet;
-  text-shadow: -3px -3px 0 #ddcfec;
+  text-shadow: -2px -2px 0 #caa4f1;
   text-align: center;
-  font-size: 200%;
+  font-size: 70px;
   font-family: 'Cairo', sans-serif;
+  padding: 15px;
 }
 
 .titulos {
-  color: #a500f1;
-  font-family: 'Cairo', sans-serif;
-  text-shadow: -3px -3px 0 #ddcfec;
+  color: blueviolet;
+  text-shadow: -2px -2px 0 #caa4f1;
   text-align: center;
-  font-size: 1 solid;
+  font-size: 40px;
   padding: 5%;
+  font-family: 'Cairo', sans-serif;
 }
 
 .subtitulos {
   color: #e6388f;
-  text-shadow: -3px -3px 0 #ddcfec;
   text-align: center;
   font-size: 150% solid;
   font-family: 'Cairo', sans-serif;
@@ -149,7 +152,7 @@ i:hover {
 }
 
 .card-deck {
-  margin-bottom: 10px;
+  padding-bottom: 40px;
 }
 
 .card {
@@ -186,8 +189,9 @@ i:hover {
   font-family: 'Cairo', sans-serif;
   font-size: 120%;
   text-align: center;
-  border: solid #645d61;
+  border: solid blueviolet;
   padding: 10px;
+  color: #645d61;
 }
 
 @-webkit-keyframes aparecer {
@@ -214,10 +218,10 @@ i:hover {
 
 .linea {
   color: #645d61;
-  text-shadow: -3px -3px 0 #ddcfec;
   text-align: center;
-  font-size: 1 solid;
+  font-size: 20px;
   font-family: 'Cairo', sans-serif;
+  padding: 15px;
 }
 
 .formulario {
@@ -230,5 +234,10 @@ i:hover {
   padding: 20px;
   -ms-flex-line-pack: justify;
       align-content: space-between;
+}
+
+label {
+  padding: 10px;
+  text-align: center;
 }
 /*# sourceMappingURL=archivo.css.map */
