--- a/assets/scss/archivo.css
+++ b/assets/scss/archivo.css
@@ -86,6 +86,77 @@ i:hover {
   padding: 25px;
 }
 
+.formulario {
+  background-color: #fbf3fd;
+  font-family: 'Cairo', sans-serif;
+  font-size: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 20px;
+  -ms-flex-line-pack: justify;
+      align-content: space-between;
+  border-radius: 5px;
+  padding: 20px;
+}
+
+/* Style inputs, select elements and textareas */
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  resize: vertical;
+}
+
+/* Style the label to display next to the inputs */
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
+
+/* Style the submit button */
+input[type=submit] {
+  background-color: #3b69be;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+}
+
+/* Floating column for labels: 25% width */
+.col-25 {
+  float: left;
+  width: 25%;
+  margin-top: 6px;
+}
+
+/* Floating column for inputs: 75% width */
+.col-75 {
+  float: left;
+  width: 75%;
+  margin-top: 6px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .col-25, .col-75, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+}
+
 .text_anaglyphic {
   color: blueviolet;
   text-shadow: -2px -2px 0 #caa4f1;
@@ -222,22 +293,5 @@ i:hover {
   font-size: 20px;
   font-family: 'Cairo', sans-serif;
   padding: 15px;
-}
-
-.formulario {
-  background-color: white;
-  font-family: 'Cairo', sans-serif;
-  font-size: 100%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 20px;
-  -ms-flex-line-pack: justify;
-      align-content: space-between;
-}
-
-label {
-  padding: 10px;
-  text-align: center;
 }
 /*# sourceMappingURL=archivo.css.map */
